--- a/src/main/java/com/example/MainSceneController9.fxml
+++ b/src/main/java/com/example/MainSceneController9.fxml
@@ -9,25 +9,25 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="559.0" prefWidth="517.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.MainSceneController9">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="559.0" prefWidth="556.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.MainSceneController9">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#f5f2eb" height="57.0" stroke="#f5f2eb" strokeType="INSIDE" width="517.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#f5f2eb" height="57.0" stroke="#f5f2eb" strokeType="INSIDE" width="556.0" />
       <Label layoutX="14.0" layoutY="18.0" text="HappenHub: Event">
          <font>
             <Font name="Californian FB" size="18.0" />
          </font>
       </Label>
-      <Button fx:id="makeAttendeeList" layoutX="1.0" layoutY="57.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="127.0" style="-fx-background-color: #E9C7C6;" text="Make Attendee List">
+      <Button fx:id="makeAttendeeList" layoutX="1.0" layoutY="57.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="133.0" style="-fx-background-color: #E9C7C6;" text="Make Attendee List">
          <font>
             <Font name="Californian FB" size="12.0" />
          </font>
       </Button>
-      <Button fx:id="budgetbutton" layoutX="261.0" layoutY="57.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="127.0" style="-fx-background-color: #E9C7C6;" text="Create Budget">
+      <Button fx:id="budgetbutton" layoutX="273.0" layoutY="57.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="141.0" style="-fx-background-color: #E9C7C6;" text="Create Budget">
          <font>
             <Font name="Californian FB" size="12.0" />
          </font>
       </Button>
-      <Button fx:id="todolist" layoutX="131.0" layoutY="57.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="127.0" style="-fx-background-color: #E9C7C6;" text="Update To-Do List">
+      <Button fx:id="todolist" layoutX="131.0" layoutY="57.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="141.0" style="-fx-background-color: #E9C7C6;" text="Update To-Do List">
          <font>
             <Font name="Californian FB" size="12.0" />
          </font>
@@ -69,7 +69,7 @@
             <Font name="Californian FB Bold" size="12.0" />
          </font>
       </Button>
-      <Button fx:id="Return" layoutX="445.0" layoutY="16.0" mnemonicParsing="false" style="-fx-background-color: #E9C7C6;" text="Return" />
+      <Button fx:id="Return" layoutX="485.0" layoutY="16.0" mnemonicParsing="false" style="-fx-background-color: #E9C7C6;" text="Return" />
       <Label layoutX="69.0" layoutY="291.0" text="Logistic Services (hired)">
          <font>
             <Font name="Californian FB" size="16.0" />
@@ -80,14 +80,18 @@
             <Font name="Californian FB" size="16.0" />
          </font>
       </Label>
-      <ListView fx:id="lshired" layoutX="48.0" layoutY="310.0" prefHeight="200.0" prefWidth="200.0" />
-      <ListView fx:id="ephired" layoutX="281.0" layoutY="310.0" prefHeight="200.0" prefWidth="200.0" />
-      <Button fx:id="hirels" layoutX="104.0" layoutY="519.0" mnemonicParsing="false" style="-fx-background-color: #E9C7C6;" text="Hire Logistics" />
-      <Button fx:id="hireep" layoutX="331.0" layoutY="519.0" mnemonicParsing="false" style="-fx-background-color: #E9C7C6;" text="Hire Event Planner" />
-      <Button fx:id="eventreqs" layoutX="390.0" layoutY="57.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="127.0" style="-fx-background-color: #E9C7C6;" text="Set Event Requirements">
+      <ListView fx:id="lshired" layoutX="24.0" layoutY="310.0" prefHeight="200.0" prefWidth="224.0" />
+      <ListView fx:id="ephired" layoutX="281.0" layoutY="310.0" prefHeight="200.0" prefWidth="253.0" />
+      <Button fx:id="hirels" layoutX="21.0" layoutY="519.0" mnemonicParsing="false" style="-fx-background-color: #E9C7C6;" text="Hire Logistics" />
+      <Button fx:id="hireep" layoutX="281.0" layoutY="519.0" mnemonicParsing="false" style="-fx-background-color: #E9C7C6;" text="Hire Event Planner" />
+      <Button fx:id="eventreqs" layoutX="414.0" layoutY="57.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="141.0" style="-fx-background-color: #E9C7C6;" text="Set Event Requirements">
          <font>
             <Font name="Californian FB" size="12.0" />
          </font>
       </Button>
+      <Button fx:id="removeBtn" layoutX="121.0" layoutY="519.0" mnemonicParsing="false" style="-fx-background-color: #E9C7C6;" text="Remove" />
+      <Button fx:id="seeBill" layoutX="195.0" layoutY="519.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="59.0" style="-fx-background-color: #E9C7C6;" text="See Bill" />
+      <Button fx:id="removeBtnEP" layoutX="402.0" layoutY="519.0" mnemonicParsing="false" style="-fx-background-color: #E9C7C6;" text="Remove" />
+      <Button fx:id="seeBillEP" layoutX="474.0" layoutY="519.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="59.0" style="-fx-background-color: #E9C7C6;" text="See Bill" />
    </children>
 </AnchorPane>
